[#noissue] Refactor to replace EnumSet with Enum.values() cache